' Generated by UML Generator
' Encoded: dLPRRzCm57xlhx3wbBAs6X9F5LHhTq43neesWH3YmKsypffZ5zjX3TF-E-V4Tk8a7PUzDFOvv_lErKSzCfPgM-HYOEwut59DSv8AQip2MitNXMNdgP9N_1SZXuDRdZ6ISfqADXXKLcIXBOShUHWGCf4qPpDo1K2vmVkFWahBRJaZN5eKR3LFmI9JnHeeG91nawf2sbYMKf4MWbgbP-IuFfCtHBBxI92Cq7W2FmS-Y2JsFoOjxsFIyZqcNS-ZcAYwR9Zz28J9A4hfm7XXx0eCVYgUUSmdxnPnBcq4rT9ML6ta2YD4M5qBH3ffA_esxCHdqaFMYbwkBVnRhQ3TUPyYucRPFWEhN06Y4Zs6mOWwXxDny0231iLz9ASNg-klmHwwEcJvrfR3kfbv8IpVYZAXld7hK2fVJPZ7b5fKXqwleqv4hIfoD0eDNqVPDoc4qYGqZoi4uy9qobebQq1XGjcribHug9cH3zpOroULsRm1r2Mvr1dJnqfQhOHWhYwJkYv2RO11RJOCPzqTpcWA1Iodq0adI3eSqugvUWa_ERkVEH-VuOWYXPSGLwMPezWmgjDR1i_hof_gudVeamxfcEoX73MSbI09urKdVa6vV5Qs28nIdBG6AGTbGlN6XAP_-zxpN0NaN5UHdsVnVgBkkOTq_EkVFsy9kTmxNiRa2H-Z1XAMpQM3zlPDa7Uesu_Oynf4TvD1abh_L3pzbU26--cDi4V_fuKGPisj0pSlfpje-UfMKmCRhleqXHCGdW_IYJ36jLA2KTamV86g9FVmy-z0I09Ho_9SPcoNzCt7i6b04zPEt0nqkInNcjtm7Una_Fp5SNn5ZXikBDFByZqhCUpapdt_XwKztVWktOIxyCuu4q3txfhjR7NsGzi8afU7qPjT5jOg2G1t2DRkbWnTsuOLG3C3otcX6VNyU8pfyGxiO_BgiFCmCCfwqXrdTzHhXNSzgcD2BSqofyLIC0dlHlZ3Z2nIovKCYcYKORjl1IsZf-cNMT_cWXb3Dop9tRVxog3cuQ_EYyaasW23xbP7TRE5kreLj7jnzJvsUmkDlLSlsUUx6e3fTEvvZvZCuF_SRm
' URL: http://www.plantuml.com/plantuml/uml/dLPRRzCm57xlhx3wbBAs6X9F5LHhTq43neesWH3YmKsypffZ5zjX3TF-E-V4Tk8a7PUzDFOvv_lErKSzCfPgM-HYOEwut59DSv8AQip2MitNXMNdgP9N_1SZXuDRdZ6ISfqADXXKLcIXBOShUHWGCf4qPpDo1K2vmVkFWahBRJaZN5eKR3LFmI9JnHeeG91nawf2sbYMKf4MWbgbP-IuFfCtHBBxI92Cq7W2FmS-Y2JsFoOjxsFIyZqcNS-ZcAYwR9Zz28J9A4hfm7XXx0eCVYgUUSmdxnPnBcq4rT9ML6ta2YD4M5qBH3ffA_esxCHdqaFMYbwkBVnRhQ3TUPyYucRPFWEhN06Y4Zs6mOWwXxDny0231iLz9ASNg-klmHwwEcJvrfR3kfbv8IpVYZAXld7hK2fVJPZ7b5fKXqwleqv4hIfoD0eDNqVPDoc4qYGqZoi4uy9qobebQq1XGjcribHug9cH3zpOroULsRm1r2Mvr1dJnqfQhOHWhYwJkYv2RO11RJOCPzqTpcWA1Iodq0adI3eSqugvUWa_ERkVEH-VuOWYXPSGLwMPezWmgjDR1i_hof_gudVeamxfcEoX73MSbI09urKdVa6vV5Qs28nIdBG6AGTbGlN6XAP_-zxpN0NaN5UHdsVnVgBkkOTq_EkVFsy9kTmxNiRa2H-Z1XAMpQM3zlPDa7Uesu_Oynf4TvD1abh_L3pzbU26--cDi4V_fuKGPisj0pSlfpje-UfMKmCRhleqXHCGdW_IYJ36jLA2KTamV86g9FVmy-z0I09Ho_9SPcoNzCt7i6b04zPEt0nqkInNcjtm7Una_Fp5SNn5ZXikBDFByZqhCUpapdt_XwKztVWktOIxyCuu4q3txfhjR7NsGzi8afU7qPjT5jOg2G1t2DRkbWnTsuOLG3C3otcX6VNyU8pfyGxiO_BgiFCmCCfwqXrdTzHhXNSzgcD2BSqofyLIC0dlHlZ3Z2nIovKCYcYKORjl1IsZf-cNMT_cWXb3Dop9tRVxog3cuQ_EYyaasW23xbP7TRE5kreLj7jnzJvsUmkDlLSlsUUx6e3fTEvvZvZCuF_SRm
' Generated on: 2025-11-14T17:08:52.270875600

@startuml
skinparam classAttributeIconSize 0
hide circle

class Article {
  -name: String
  -quantity: int
  -price: double
  -discount: double
  -calculator: Calculator = new Calculator()
  --
  +Article(name: String, quantity: int, price: double, discount: double)
  +Article()
  +getName(): String
  +setName(name: String): void
  +getQuantity(): int
  +setQuantity(quantity: int): void
  +getPrice(): double
  +setPrice(price: double): void
  +getDiscount(): double
  +setDiscount(discount: double): void
  +getGrossAmount(): double
  +getDiscountedAmount(): double
  +toString(): String
}

class Calculator {
  +{static} EMPTY: String = "empty"
  --
  +multiply(a: int, b: int): int
  +concat(a: String, b: String): String
  +sum(a: double, b: double): double
  +discount(amount: double, percent: double): double
  +calculateTotal(amounts: List<Double>): double
}

class OrderController {
  -{static} log: Logger = LoggerFactory.getLogger(OrderController.class)
  -view: OrderView
  -orders: List<Order>
  -searcher: Searcher
  --
  +OrderController(view: OrderView, orders: List<Order>)
  -searchOrder(): void
}

class Main {
  -{static} log: Logger = LoggerFactory.getLogger(Main.class)
  --
  +{static} main(args: String[]): void
}

class Order {
  -orderId: String
  -articles: List<Article>
  -calculator: Calculator = new Calculator()
  --
  +Order(orderId: String, articles: List<Article>)
  +Order()
  +getOrderId(): String
  +setOrderId(orderId: String): void
  +getArticles(): List<Article>
  +setArticles(articles: List<Article>): void
  +getGrossTotal(): double
  +getDiscountedTotal(): double
  +toString(): String
}

class Searcher {
  +searchExactPhrase(phrase: String, list: List<String>): boolean
  +searchWord(word: String, list: List<String>): boolean
  +getWordByIndex(list: List<String>, index: int): String
  +searchByPrefix(prefix: String, list: List<String>): List<String>
  +filterByKeyword(keyword: String, list: List<String>): List<String>
}

class OrderView {
  -searchField: JTextField = new JTextField(10)
  -searchButton: JButton = new JButton("Search")
  -resultArea: JTextArea = new JTextArea(10, 40)
  --
  +OrderView()
  +getSearchId(): String
  +getSearchButton(): JButton
  +addSearchListener(listener: ActionListener): void
  +displayOrder(order: Order): void
  +displayMessage(message: String): void
}

Article *-- Calculator
OrderController *-- OrderView
OrderController o-- Order
OrderController *-- Searcher
Order o-- Article
Order *-- Calculator
OrderView ..> Order
@enduml